{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 35,
  "lineage": "b3ada150-41dc-f635-5c01-2b707acf4409",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:network-acl/acl-04a25a087ad3653fe",
            "default_network_acl_id": "acl-04a25a087ad3653fe",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04a25a087ad3653fe",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "725840066530",
            "subnet_ids": [
              "subnet-000c126adb6b11633",
              "subnet-00214ba07f9db7a22",
              "subnet-0082d7907997278e6",
              "subnet-01c294d312aaa88ca",
              "subnet-024c07500986c0742",
              "subnet-09d8d1f99ca1792c2"
            ],
            "tags": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-0f39444db76c6642b",
            "default_route_table_id": "rtb-0f39444db76c6642b",
            "id": "rtb-0f39444db76c6642b",
            "owner_id": "725840066530",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:security-group/sg-09ad13fbf704b2182",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09ad13fbf704b2182",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "725840066530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09192a2c2d4ff0d36",
            "domain": "vpc",
            "id": "eipalloc-09192a2c2d4ff0d36",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-154-142-41.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.154.142.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:internet-gateway/igw-08ea2c45bca73c258",
            "id": "igw-08ea2c45bca73c258",
            "owner_id": "725840066530",
            "tags": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09192a2c2d4ff0d36",
            "association_id": "eipassoc-09a9f5bab555a649e",
            "connectivity_type": "public",
            "id": "nat-05cdc9635615b61d3",
            "network_interface_id": "eni-0035ef08236ae81fc",
            "private_ip": "10.0.101.179",
            "public_ip": "54.154.142.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000c126adb6b11633",
            "tags": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd63bd459dcaa5dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05cdc9635615b61d3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd63bd459dcaa5dd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ea2c45bca73c258",
            "id": "r-rtb-0fd0362eb27276fb71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd0362eb27276fb7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-0d687af85fa5f9703",
            "id": "rtb-0d687af85fa5f9703",
            "owner_id": "725840066530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-db",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-db",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": null,
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-0bd63bd459dcaa5dd",
            "id": "rtb-0bd63bd459dcaa5dd",
            "owner_id": "725840066530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-private",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-private",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": null,
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-0fd0362eb27276fb7",
            "id": "rtb-0fd0362eb27276fb7",
            "owner_id": "725840066530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-public",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-public",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": null,
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019f910ba994d0731",
            "route_table_id": "rtb-0d687af85fa5f9703",
            "subnet_id": "subnet-00214ba07f9db7a22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073068c7a2adabf4b",
            "route_table_id": "rtb-0d687af85fa5f9703",
            "subnet_id": "subnet-0082d7907997278e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04840c0aac0ce4be5",
            "route_table_id": "rtb-0bd63bd459dcaa5dd",
            "subnet_id": "subnet-09d8d1f99ca1792c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0055023bd0808b154",
            "route_table_id": "rtb-0bd63bd459dcaa5dd",
            "subnet_id": "subnet-024c07500986c0742"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0347f400d472e9b75",
            "route_table_id": "rtb-0fd0362eb27276fb7",
            "subnet_id": "subnet-000c126adb6b11633"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075edb9d0eb573a5a",
            "route_table_id": "rtb-0fd0362eb27276fb7",
            "subnet_id": "subnet-01c294d312aaa88ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-00214ba07f9db7a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00214ba07f9db7a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1a",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1a",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-0082d7907997278e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0082d7907997278e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1b",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1b",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-09d8d1f99ca1792c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d8d1f99ca1792c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1a",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1a",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-024c07500986c0742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024c07500986c0742",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1b",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1b",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-000c126adb6b11633",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000c126adb6b11633",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1a",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1a",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-01c294d312aaa88ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c294d312aaa88ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1b",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1b",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-025dd71f599392e89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:vpc/vpc-025dd71f599392e89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a25a087ad3653fe",
            "default_route_table_id": "rtb-0f39444db76c6642b",
            "default_security_group_id": "sg-09ad13fbf704b2182",
            "dhcp_options_id": "dopt-05339a25b83be3154",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025dd71f599392e89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f39444db76c6642b",
            "owner_id": "725840066530",
            "tags": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            }
          }
        }
      ]
    }
  ]
}